# FMD_EstruturasDeDados

C/ListaLigadaDinamica/include/: List.h
C/ListaLigadaDinamica/src/: List.c
C/ListaLigadaEstatica/include/: List.h
C/ListaLigadaEstatica/src/: List.c  main.c
C/ListaLinear/: CMakeLists.txt
C/ListaLinear/include/: List.h
C/ListaLinear/src/: List.c  main.c
